more basic style tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -19,16 +19,16 @@
   <body>
 
     <header>
-      <h1>Farset Labs: Door</h1>
+      <h1>Door me!</h1>
     </header>
 
     <section class="status status-closed">
-      <p>The door is currently <span class="door-status">closed</span>.</p>
+      <p>The space is currently <span class="door-status">closed</span>.</p>
     </section>
 
     <section class="status status-open">
       <p>
-        The door is currently <span class="door-status">open</span>.
+        The space is currently <span class="door-status">open</span>.
         There should be someone inside who can let you in.
       </p>
     </section>
@@ -44,7 +44,7 @@
           <input type="password" id="password" name="password" />
         </div>
         <div class="field">
-          <input type="submit" id="open-submit" name="open-submit" value="Open" />
+          <input type="submit" id="open-submit" name="open-submit" value="Door me!" />
         </div>
       </form>
     </section>
