--- a/app/index.html
+++ b/app/index.html
@@ -16,35 +16,37 @@
     <link rel="stylesheet" href="styles/main.css">
     <script src="scripts/vendor/modernizr.min.js"></script>
   </head>
-  <body>
+  <body class="space-is-open">
 
-    <header>
-      <h1>Door me!</h1>
-    </header>
-
-    <section class="status status-closed">
-      <p>The space is currently <span class="door-status">closed</span>.</p>
+    <section class="door-status">
+      <p>Farset Labs is</p>
+      <div class="status content-open">Open</div>
+      <div class="status content-closed">Closed</div>
     </section>
 
-    <section class="status status-open">
-      <p>
-        The space is currently <span class="door-status">open</span>.
+    <section class="message">
+      <span class="content-open">
         There should be someone inside who can let you in.
-      </p>
+        If not, you can open the door with your username and password below.
+      </span>
+      <span class="content-closed">
+        Looks like you’re the only one here right now!
+        Open the door with your username and password below.
+      </span>
     </section>
 
     <section class="access-form">
       <form>
         <div class="field">
           <label>Username</label>
-          <input type="text" id="username" name="username" />
+          <input type="text" class="textinput" id="username" name="username" placeholder="Username…" />
         </div>
         <div class="field">
           <label>Password</label>
-          <input type="password" id="password" name="password" />
+          <input type="password" class="textinput" id="password" name="password" placeholder="Password…" />
         </div>
         <div class="field">
-          <input type="submit" id="open-submit" name="open-submit" value="Door me!" />
+          <input type="submit" class="button js-door-me" id="open-submit" name="open-submit" value="Door me!" />
         </div>
       </form>
     </section>
@@ -73,6 +75,8 @@
         g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
         s.parentNode.insertBefore(g,s)}(document,'script'));
     </script>
+
+    <script src="scripts/main.js"></script>
 
     <!-- build:js scripts/plugins.js -->
     <script src="scripts/vendor/bootstrap/bootstrap-affix.js"></script>
